# src/main/java/hu/bme/aut/haulagecompany/controller/OrderController.java
@@ -1,5 +1,6 @@
 package hu.bme.aut.haulagecompany.controller;
 
+import hu.bme.aut.haulagecompany.model.dto.GetOrderDTO;
 import hu.bme.aut.haulagecompany.model.dto.OrderDTO;
 import hu.bme.aut.haulagecompany.service.OrderService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,45 +11,45 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-@RequestMapping("/api/purchases")
+@RequestMapping("/api/orders")
 public class OrderController {
     @Autowired
     private OrderService orderService;
 
     @PostMapping
-    public ResponseEntity<OrderDTO> createPurchase(@RequestBody OrderDTO orderDTO) {
-        OrderDTO createdPurchase = orderService.createPurchase(orderDTO);
-        return new ResponseEntity<>(createdPurchase, HttpStatus.CREATED);
+    public ResponseEntity<GetOrderDTO> createOrder(@RequestBody OrderDTO orderDTO) {
+        OrderDTO createdOrder = orderService.createOrder(orderDTO);
+        return new ResponseEntity<>(createdOrder, HttpStatus.CREATED);
     }
 
     @GetMapping
-    public ResponseEntity<List<OrderDTO>> getAllPurchases() {
-        return new ResponseEntity<>(orderService.getAllPurchases(), HttpStatus.OK);
+    public ResponseEntity<List<GetOrderDTO>> getAllOrders() {
+        return new ResponseEntity<>(orderService.getAllOrders(), HttpStatus.OK);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<OrderDTO> getPurchaseById(@PathVariable Long id) {
-        OrderDTO purchase = orderService.getPurchaseById(id);
-        if (purchase != null) {
-            return new ResponseEntity<>(purchase, HttpStatus.OK);
+    public ResponseEntity<GetOrderDTO> getOrderById(@PathVariable Long id) {
+        GetOrderDTO order = orderService.getOrderDTOById(id);
+        if (order != null) {
+            return new ResponseEntity<>(order, HttpStatus.OK);
         } else {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<OrderDTO> updatePurchase(@PathVariable Long id, @RequestBody OrderDTO orderDTO) {
-        OrderDTO updatedPurchase = orderService.updatePurchase(id, orderDTO);
-        if (updatedPurchase != null) {
-            return new ResponseEntity<>(updatedPurchase, HttpStatus.OK);
+    public ResponseEntity<GetOrderDTO> updateOrder(@PathVariable Long id, @RequestBody OrderDTO orderDTO) {
+        GetOrderDTO updatedOrder = orderService.updateOrder(id, orderDTO);
+        if (updatedOrder != null) {
+            return new ResponseEntity<>(updatedOrder, HttpStatus.OK);
         } else {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deletePurchase(@PathVariable Long id) {
-        orderService.deletePurchase(id);
+    public ResponseEntity<Void> deleteOrder(@PathVariable Long id) {
+        orderService.deleteOrder(id);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 }
