# src/main/java/hu/bme/aut/haulagecompany/model/dto/GetOrderDTO.java
@@ -2,16 +2,15 @@ package hu.bme.aut.haulagecompany.model.dto;
 
 import jakarta.annotation.Nullable;
 import lombok.Data;
+
 import java.util.List;
 
 @Data
-public class LorrySiteDTO {
+public class GetOrderDTO {
     @Nullable
     private Long id;
-    private String name;
-    private String address;
-    @Nullable
+    private ShopDTO shopDTO;
     private List<GoodDTO> goodDTOs;
     @Nullable
-    private List<VehicleDTO> vehicleDTOs;
+    private Long transportOperationID;
 }
